# poc-streamlit

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: exemplo.xlsx  testeCorreto.xlsx  testeCorreto2.xlsx  testeErrado.xlsx
src/: main.py
src/backEnd/: validador.py
src/contracts/: contratoMetas.py
src/frontEnd/: ui.py
