[tool.poetry]
name = "pocStreamlit"
version = "1.0"
description = "Uma POC do Framework streamlit para a aula de Data Engineerging Programming "
authors = ["Gabriel Brigido <gabriel.brigido@gbinteligencia.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
taskipy = "^1.12.2"
streamlit = "^1.33.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
commitizen = "^3.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
docs = "mkdocs serve"
git-config = "pre-commit install && pre-commit install --hook-type commit-msg"
pre-commit = "git add . && pre-commit run"
commit = "git add . && cz commit"
